Correcció test config